# CrystalSweep

./: .env.example  .gitignore  .python-version  LICENSE  README.md  pyproject.toml
crystalsweep/: __init__.py
crystalsweep/controller/: __init__.py  main_controller.py
crystalsweep/model/: __init__.py  ad_viewer_model.py  aerotech_a1_model.py  beamline_config_model.py  collection_model.py  collection_settings_model.py  config_model.py  controller_connection_model.py  crysalis_converter.py  detector_model.py  epics_model.py  epics_scan_model.py  file_settings_model.py  image_loader_model.py  integration_model.py  main_model.py  motor_limits.py  newport_xps_model.py  scan_model.py  script_model.py  validation.py
crystalsweep/scan/: __init__.py  aerotech_a1.py  driver.py  engine.py  newport_xps.py  registry.py  step_driver.py
crystalsweep/ui/: __init__.py
crystalsweep/ui/controller/: __init__.py  ad_viewer_controller.py  beamline_config_controller.py  collect_controller.py  collection_settings_controller.py  collection_table_controller.py  file_settings_controller.py  main_controller.py  scan_engine.py  script_editor_controller.py
crystalsweep/ui/view/: __init__.py  ad_viewer_view.py  beamline_config_view.py  collect_view.py  collection_settings_view.py  collection_table_view.py  file_settings_view.py  main_view.py  script_editor_view.py
crystalsweep/ui/view/custom/: __init__.py  colormaps.py  histogram_utils.py  icons.py  image_canvas.py  integration_plot.py  intensity_histogram.py  settings_popup.py  theme.py  widgets.py
crystalsweep/view/: __init__.py  main_view.py
